# python-random-quotes

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml
.run/: Run grpc.run.xml  Run gunicorn.run.xml  Run uvicorn.run.xml  Test application.run.xml
alembic/: env.py
alembic/versions/: 33977e8b1553_create_quotes_table.py  d362a4be2327_create_views_table.py
containers/: service.yml
docs/: quotes.yaml  workflow.d2
graphql/: quotes.graphql
mutation/: quote.toml
proto/: quotes.proto
requests/: Quotes.http  yaak.quotes.json
scripts/docker/: start-server.sh
src/config/: config.py
src/database/: peewee.py  sqlalchemy.py
src/grpc/: grpc.py
src/grpc/proto/: quotes_pb2.py  quotes_pb2.pyi  quotes_pb2_grpc.py
src/heartbeat/: heartbeat.py  interfaces.py
src/quote/: interfaces.py  models.py  quote.py
src/quote/tests/: test_quote.py
src/quote_api/: api.py  interfaces.py
src/quote_api/tests/: test_api.py
src/quote_api/tests/testdata/: responses.yaml
src/server/: fastapi.py  flask.py  grpc.py  litestar.py  starlette.py
src/server/graphql/: resolvers.py  schema.py
src/server/proto/: quotes_pb2.py  quotes_pb2.pyi  quotes_pb2_grpc.py
tests/: test_integration.py
