[project]
name = "quotes-python"
version = "1.0.0"
description = "It's a service that shows random quotes, allows to like them and show quote that is pretty similar to a specified one"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ariadne>=0.23.0",
    "faker>=28.4.1",
    "fastapi>=0.114.2",
    "grpcio==1.64.1",
    "grpcio-tools==1.64.1",
    "peewee>=3.17.6",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.1",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.34",
    "grpcio-status==1.64.1",
    "litestar>=2.11.0",
    "starlette>=0.38.5",
    "testcontainers>=4.8.1",
    "grpcio-reflection==1.64.1",
    "flask[async]>=3.0.3",
    "uvicorn>=0.30.6",
    "psycopg2-binary>=2.9.9",
    "responses>=0.25.3",
    "pytest-mock>=3.14.0",
    "alembic>=1.13.2",
    "gunicorn>=23.0.0",
    "cosmic-ray>=8.3.15",
]
